--- a/Code V3/pruebas.ipynb
+++ b/Code V3/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -48,13 +48,13 @@
     }
    ],
    "source": [
-    "csv_file = 'C:/Users/jabac/OneDrive - Universidad del Norte/Documentos/Tareas/Proyecto final/Scripts/Repositorio/Proyecto-Final/Route/ROUTE U30.csv'\n",
+    "csv_file = 'C:/Users/jabac/OneDrive - Universidad del Norte/Documentos/Tareas/Proyecto final/Scripts/Repositorio/Proyecto-Final/Route/U30/ROUTE U30.csv'\n",
     "\n",
     "try:\n",
     "    routeData = pd.read_csv(csv_file)\n",
-    "    routeData.to_feather('routeData.feather')\n",
+    "    routeData.to_feather('ROUTE U30.feather')\n",
     "    #Read feather file\n",
-    "    routeData = pd.read_feather('routeData.feather')\n",
+    "    routeData = pd.read_feather('ROUTE U30.feather')\n",
     "except Exception as ex:\n",
     "    print(ex)\n",
     "    print('Not a valid data vector')\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -104,46 +104,6 @@
     "\n",
     "plt.show()"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'np'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [55]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m y \u001B[38;5;241m=\u001B[39m [\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m2\u001B[39m,\u001B[38;5;241m3\u001B[39m]\n\u001B[1;32m----> 2\u001B[0m \u001B[43my\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mnp\u001B[49m\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;241m2\u001B[39m)\n\u001B[0;32m      3\u001B[0m y\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'int' object has no attribute 'np'"
-     ]
-    }
-   ],
-   "source": [
-    "y = [1,2,3]\n",
-    "y[1].np.append(2)\n",
-    "y"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
