--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -64,22 +64,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['S1-S2', 'S2-S3', 'S3-S4', 'S4-S5', 'S5-S6', 'S6-S7', 'S7-S8', 'S8-S9', 'S9-S10', 'S10-S11', 'S11-S12', 'S12-S13', 'S13-S14', 'S14-S15', 'S15-S16', 'S16-S17', 'S17-S18', 'S18-S19', 'S19-S20', 'S20-S21', 'S21-S22', 'S22-S23', 'S23-S24', 'S24-S25', 'S25-S26', 'S26-S27', 'S27-S28', 'S28-S29', 'S29-S30', 'S30-S31', 'S31-S32', 'S32-S33', 'S33-S34', 'S34-S35']\n"
+     ]
+    }
+   ],
    "source": [
     "long = routeData[['LONG']].iloc[:, -1].values\n",
-    "lat = routeData[['LAT']].iloc[:,-1].values\n"
+    "lat = routeData[['LAT']].iloc[:,-1].values\n",
+    "label = routeData[['LABEL']].iloc[:, -1].values\n",
+    "stop_list = [label[i] for i in range(len(label)) if label[i] is not None]\n",
+    "charger_sections = [f\"{stop_list[i]}-{stop_list[i+1]}\" for i in range(len(stop_list)-1)]\n",
+    "print(charger_sections)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
