--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -122,6 +122,45 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = 2\n",
+    "if ((idx := element) in [2, 3, 4]) or ((suma := 5+5) < 3):\n",
+    "    print('Hola')\n",
+    "else:\n",
+    "    print(idx)\n",
+    "    print(suma)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
