--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -152,6 +152,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jabac\\OneDrive - Universidad del Norte\\Documentos\\Tareas\\Proyecto final\\Scripts\\Repositorio\\Proyecto-Final\\Code\n",
+      "C:\\Users\\jabac\\OneDrive - Universidad del Norte\\Documentos\\Tareas\\Proyecto final\\Scripts\\Repositorio\\Proyecto-Final\n",
+      "C:\\Users\\jabac\\OneDrive - Universidad del Norte\\Documentos\\Tareas\\Proyecto final\\Scripts\\Repositorio\\Proyecto-Final\\UI\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "path_code = Path.cwd()\n",
+    "print(path_code)\n",
+    "path_parent = path_code.parent\n",
+    "print(path_parent)\n",
+    "path_UI = Path(path_parent, \"UI\")\n",
+    "print(path_UI)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jabac\\OneDrive - Universidad del Norte\\Documentos\\Tareas\\Proyecto final\\Scripts\\Repositorio\\Proyecto-Final\\Code\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "'C:/Users/jabac/OneDrive - Universidad del Norte/Documentos/Tareas/Proyecto final/Scripts/Repositorio/Proyecto-Final/Code'"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path_code = str(path_code)\n",
+    "print(path_code)\n",
+    "path_code.replace('\\\\','/')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jabac\\OneDrive - Universidad del Norte\\Documentos\\Tareas\\Proyecto final\\Scripts\\Repositorio\\Proyecto-Final\\TestCase\\i37Bus\\ieee37.dss\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_ieee37 = Path(path_parent, \"TestCase\", \"i37Bus\", \"ieee37.dss\")\n",
+    "print(path_ieee37)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/57301/Documents/U/202210/Proyecto final/Proyecto-Final-main/TestCase/i37Bus/ieee37\n"
+     ]
+    }
+   ],
+   "source": [
+    "Path='C:/Users/57301/Documents/U/202210/Proyecto final/Proyecto-Final-main/TestCase/i37Bus'\n",
+    "Path_Complete=Path+'/ieee37'\n",
+    "print(Path_Complete)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
