--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -262,6 +262,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Redirect (C:/Users/57301/Documents/U/202210/Proyecto final/Proyecto-Final-main/TestCase/i37Bus/ieee37)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Redirect ({Path_Complete})')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
