--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -308,6 +308,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tiempo = [hour for hour in range(24)]\n",
+    "print(tiempo)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
