--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -331,9 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.25, 0.5, 1.0, 0.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "v = [1,2,4,1]\n",
+    "w = list(np.array(v)/max(v))\n",
+    "print(w)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
