--- a/Code/pruebas.ipynb
+++ b/Code/pruebas.ipynb
@@ -353,6 +353,191 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Javier Hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 'Hola'\n",
+    "z = '{0} Javier {0}'.format(y)\n",
+    "print(z)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "path_Code = Path.cwd()\n",
+    "path_parent = path_Code.parent\n",
+    "\n",
+    "path_TestCase = Path(path_parent, \"TestCase\")\n",
+    "ruta_file_dss = str(Path(path_TestCase, \"i37Bus\", \"ieee37.dss\"))\n",
+    "system_name = ruta_file_dss.split('\\\\')[-1].split('.')[0]\n",
+    "\n",
+    "path_Results = Path(path_parent, \"Results\")\n",
+    "voltages_bases_file = str(Path(path_Results,f'{system_name}_EXP_VOLTAGES.CSV'))\n",
+    "try:\n",
+    "    voltagesData = pd.read_csv(voltages_bases_file, usecols=(\"Bus\",\" BasekV\"))\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "    print('Not a valid data vector')\n",
+    "    voltagesData = None\n",
+    "bases = list(voltagesData[[' BasekV']].iloc[:, -1].values)\n",
+    "print(bases)\n",
+    "print(type(bases[0]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.0, 4.0, 6.0]\n",
+      "<class 'numpy.float64'>\n",
+      "[2.0, 4.0, 6.0]\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "matriz = [[1.0,2.0], [3.0,4.0], [5.0,6.0]]\n",
+    "x = np.array(matriz)\n",
+    "maxC = list(x.max(axis=1, initial=None))\n",
+    "print(maxC)\n",
+    "print(type(maxC[0]))\n",
+    "\n",
+    "max_power_per_charger = [float(max_power) for max_power in maxC]\n",
+    "print(max_power_per_charger)\n",
+    "print(type(max_power_per_charger[0]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5        0.66666667 0.75      ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista1 = np.array([1,2,3])/np.array([2,3,4])\n",
+    "print(lista1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-05-25 00:00:00\n",
+      "2022-05-25 00:00:01\n",
+      "00:00\n",
+      "08:20\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "import time\n",
+    "lista_tiempo = []\n",
+    "today = datetime.date.fromtimestamp(time.time())\n",
+    "fecha = datetime.datetime(today.year, today.month,today.day, 0, 0)\n",
+    "print(fecha)\n",
+    "a = datetime.datetime.timestamp(fecha)\n",
+    "t = datetime.datetime.fromtimestamp(a)\n",
+    "print(t)\n",
+    "for x in range(1440):\n",
+    "    t = fecha + datetime.timedelta(minutes=x)\n",
+    "    lista_tiempo.append(t.strftime(\"%H:%M\"))\n",
+    "print(lista_tiempo[0])\n",
+    "print(lista_tiempo[500])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current date:  2022-05-25\n",
+      "Current year: 2022\n",
+      "Current month: 5\n",
+      "Current day: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "todays_date = date.today()\n",
+    "\n",
+    "print(\"Current date: \", todays_date)\n",
+    "\n",
+    "print(\"Current year:\", todays_date.year)\n",
+    "print(\"Current month:\", todays_date.month)\n",
+    "print(\"Current day:\", todays_date.day)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
